# pam_login_ng

./: .gitignore  Cargo.toml  GUI.md  Makefile  README.md  make_release.sh
.github/workflow/: main.yml
.github/workflows/: release.yml  rust.yml
Manual/: INDEX.md  INSTALL.md  MIGRATION.md  README.md  polyauthctl.1
completions/: README.md  polyauthctl.bash  polyauthctl.zsh
login_ng/: Cargo.toml
login_ng-cli/: Cargo.toml
login_ng-cli/src/: main.rs
login_ng-ctl/: Cargo.toml
login_ng-ctl/src/: main.rs
login_ng-gui/: Cargo.toml
login_ng-gui/src/: main.rs
login_ng-gui/ui/: app-window.slint
login_ng-session/: Cargo.toml
login_ng-session/src/: dbus.rs  desc.rs  errors.rs  lib.rs  main.rs  manager.rs  node.rs
login_ng-session/src/sessionctl/: main.rs
login_ng-session/src/tests/: desc.rs
login_ng/src/: auth.rs  command.rs  error.rs  lib.rs  mount.rs  storage.rs  user.rs
login_ng/src/tests/: main.rs  mod.rs  secondary.rs  storage.rs  user.rs
login_ng_user_interactions/: Cargo.toml
login_ng_user_interactions/src/: cli.rs  conversation.rs  greetd.rs  lib.rs  login.rs  pam.rs
pam_login_ng/: Cargo.toml
pam_login_ng-common/: Cargo.toml
pam_login_ng-common/src/: dbus.rs  disk.rs  lib.rs  mount.rs  result.rs  security.rs  service.rs  session.rs
pam_login_ng-common/src/tests/: mod.rs  mount.rs  security.rs
pam_login_ng/src/: lib.rs
pam_login_ng/src/pam_login_ng-mount/: main.rs
pam_login_ng/src/pam_login_ng-service/: main.rs
rootfs/etc/login_ng-session/: default.service  restart_session.service  steamdeck.service
rootfs/etc/pam.d/: login_ng-autologin
rootfs/usr/lib/: os-session-select
rootfs/usr/lib/login_ng-session/: restart_session.service
rootfs/usr/lib/sessionexec/: plasma-wayland.sh  restart_session.sh  session-return.sh
rootfs/usr/lib/systemd/system/: login_ng.service  login_ng@.service  pam_login_ng.service  pam_polyauth.service
rootfs/usr/lib/systemd/system/greetd.service.d/: override.conf
rootfs/usr/lib/sysusers.d/: login_ng.conf  polyauth.conf
rootfs/usr/libexec/: os-session-select
rootfs/usr/share/applications/: org.sessionexec.session-return.desktop
rootfs/usr/share/dbus-1/system.d/: org.neroreflex.login_ng_mount.conf  org.neroreflex.login_ng_session.conf  org.neroreflex.polyauth_mount.conf  org.neroreflex.polyauth_session.conf  org.zbus.login_ng.conf
rootfs/usr/share/wayland-sessions/: game-mode.desktop  login_ng-session.desktop
sessionexec/: Cargo.toml
sessionexec/src/: cstr.rs  execve.rs  gamescope.rs  lib.rs  main.rs  plasma.rs  runner.rs
src/: auth.rs  cli.rs  command.rs  conversation.rs  error.rs  greetd.rs  lib.rs  login.rs  mount.rs  pam.rs  storage.rs  user.rs  user_conversation.rs
src/login-ng_cli/: main.rs
src/login-ng_cmd/: main.rs
src/login-ng_ctl/: main.rs
src/pam/: disk.rs  mod.rs  mount.rs  result.rs  security.rs  session.rs
src/pam_login_ng-mount/: main.rs
src/pam_login_ng-service/: main.rs
src/tests/: autologin.rs  main.rs  mod.rs  secondary.rs  storage.rs  user.rs
src/tests/pam/: mod.rs  mount.rs  security.rs
test_data/test_cyclic_deps/: default.service
test_data/test_dependencies/: dependency.service
test_data/test_restart/: default.service  test_software.sh
