[package]
name = "login_ng"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[[bin]]
name = "login-ng_cli"
path = "src/login-ng_cli/main.rs"

[[bin]]
name = "login-ng_ctl"
path = "src/login-ng_ctl/main.rs"

[dependencies]
rpassword = "^7.3"
thiserror = "^1.0"
aes-gcm = "^0.10"
bcrypt = "^0.15"
hkdf = { version = "^0.12", features = ["std"] }
sha2 = "0.10.8"
pam-client2 = { version = "0.5.2", features = [] }
argh = "0.1.12"
users = "0.11.0"
xattr = "1.3.1"
bytevec2 = "0.3.1"
chrono = "0.4.38"

# Conditional dependencies
[features]
default = ["greetd"]  # Enable greetd feature by default
greetd = ["greetd_ipc", "nix"]

# Optional dependencies
[dependencies.greetd_ipc]
version = "0.10.3"
features = ["sync-codec"]
optional = true

[dependencies.nix]
version = "^0.29"
optional = true
