[package]
name = "login_ng-ctl"
version = "0.6.12"
description = "A command-line utility to manage authentication data on user accounts."
homepage = "https://github.com/NeroReflex/login_ng"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
edition = "2021"
license-file = "../LICENSE.md"

[dependencies]
argh = "^0"
chrono = "^0"
login_ng = { path = "../login_ng"}
login_ng_user_interactions = { path = "../login_ng_user_interactions", features = []}

[features]
default = []
pam = ["login_ng_user_interactions/pam"]

[package.metadata.deb]
license-file = ["../LICENSE.md", "4"]
extended-description = """\
A command-line utility to manage authentication \
data on user accounts."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/login_ng-ctl", "usr/bin/", "755"],
    ["../rootfs/etc/pam.d/login_ng-ctl", "etc/pam.d/", "644"],
]