[package]
name = "login_ng-gui"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
slint = "1.8.0"
argh = "^0.1"
login_ng = { path = "../login_ng"}
login_ng_user_interactions = { path = "../login_ng_user_interactions", features = []}

[build-dependencies]
slint-build = "1.8.0"

# Conditional dependencies
[features]
default = ["greetd"]  # Enable greetd feature by default
greetd = ["login_ng_user_interactions/greetd"]
pam = ["login_ng_user_interactions/pam"]

[package.metadata.deb]
license-file = ["../LICENSE.md", "4"]
extended-description = """\
A graphical utility to login into a user accounts: \
supports either greetd and pam."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/login_ng-gui", "usr/bin/", "755"],
]
