[package]
name = "login_ng-gui"
version = "0.6.16"
description = "A graphical utility to login into a user accounts."
homepage = "https://github.com/NeroReflex/login_ng"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
edition = "2021"
license-file = "../LICENSE.md"

[dependencies]
slint = { version = "^1.8", default-features = false, features = [
    "compat-1-2",
    "gettext",
    "backend-winit-wayland",
    "renderer-femtovg",
] }
argh = "^0"
login_ng = { path = "../login_ng"}
login_ng_user_interactions = { path = "../login_ng_user_interactions", features = []}

[build-dependencies]
slint-build = "^1.8"

# Conditional dependencies
[features]
default = ["greetd"]  # Enable greetd feature by default
greetd = ["login_ng_user_interactions/greetd"]
pam = ["login_ng_user_interactions/pam"]

[package.metadata.deb]
license-file = ["../LICENSE.md", "4"]
extended-description = """\
A graphical utility to login into a user accounts: \
supports either greetd and pam."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/login_ng-gui", "usr/bin/", "755"],
]
