[package]
name = "login_ng-session"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
argh = "^0.1"
login_ng = { path = "../login_ng" }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync", "signal", "process", "time", "fs", "io-util"] }
thiserror = "^2.0"
zbus = "5.5.0"
nix = { version = "^0.29", features = [ "signal" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[package.metadata.deb]
license-file = ["../LICENSE.md", "4"]
extended-description = """\
A manager for user sessions."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/login_ng-session", "usr/bin/", "755"],
    ["rootfs/usr/bin/start-login_ng-session", "usr/bin/", "755"],
]
