[package]
name = "login_ng-session"
version = "0.6.17"
description = "A manager for user sessions."
homepage = "https://github.com/NeroReflex/login_ng"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
edition = "2021"
license-file = "../LICENSE.md"

[[bin]]
name = "login_ng-sessionctl"
path = "src/sessionctl/main.rs"

[dependencies]
argh = "^0"
login_ng = { path = "../login_ng" }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync", "signal", "process", "time", "fs", "io-util"] }
thiserror = "^2"
zbus = "^5"
libc = { version = "*" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[package.metadata.deb]
license-file = ["../LICENSE.md", "4"]
extended-description = """\
A manager for user sessions."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/login_ng-session", "usr/bin/", "755"],
    ["target/release/login_ng-sessionctl", "usr/bin/", "755"],
    ["../rootfs/usr/bin/start-login_ng-session", "usr/bin/", "755"],
    ["../rootfs/usr/share/wayland-sessions/login_ng-session.desktop", "usr/share/wayland-sessions/", "755"],
]
