[package]
name = "login_ng_user_interactions"
edition = "2021"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
license-file = "../LICENSE.md"

[lib]
name = "login_ng_user_interactions"

[dependencies]
configparser = "^3"
rpassword = "^7.3"
thiserror = "^2"
pam-client2 = { version = "^0", features = [], optional = true }
login_ng = { path = "../login_ng"}

# Conditional dependencies
[features]
default = []
greetd = ["greetd_ipc", "nix"]
pam = ["pam-client2"]

# Optional dependencies
[dependencies.greetd_ipc]
version = "^0"
features = ["sync-codec"]
optional = true

[dependencies.nix]
version = "^0"
optional = true
