[package]
name = "pam_login_ng_common"
version = "0.0.0"
edition = "2021"
authors = ["Denis Benato <benato.denis96@gmail.com>"]

[dependencies]
login_ng = { path = "../login_ng"}
zbus = "5.5.0"
tokio = { version = "^1.43", features = ["macros", "rt-multi-thread", "sync", "signal"] }
thiserror = "2.0.11"
sys-mount = "3.0.1"
rsa = { version = "0.9.7", features = ["pem", "std", "u64_digit"] }
rand = "0.8.5"
