[package]
name = "pam_login_ng_common"
version = "0.0.0"
edition = "2021"
authors = ["Denis Benato <benato.denis96@gmail.com>"]

[dependencies]
login_ng = { path = "../../login_ng"}
zbus = "^5"
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync", "signal", "time"] }
thiserror = "^2"
sys-mount = "^3"
rsa = { version = "0.9.7", features = ["pem", "std", "u64_digit"] }
rand = "0.8.5"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
