[package]
name = "pam_login_ng"
version = "0.1.0"
edition = "2021"
authors = ["Denis Benato <benato.denis96@gmail.com>"]

[lib]
name = "pam_login_ng"
crate-type = ["cdylib"]

[[bin]]
name = "pam_login_ng-service"
path = "src/pam_login_ng-service/main.rs"

[dependencies]
pam-bindings = "^0.1.1"
login_ng = { path = "../login_ng"}
zbus = "5.5.0"
tokio = { version = "^1.43", features = ["macros", "rt-multi-thread", "sync"] }
thiserror = "2.0.11"
sys-mount = "3.0.1"
rsa = { version = "0.9.7", features = ["pem", "std", "u64_digit"] }
rand = "0.8.5"
console-subscriber = "0.4.1"
