[package]
name = "pam_login_ng"
version = "0.6.17"
description = "Additional pam module and service to login the user."
homepage = "https://github.com/NeroReflex/login_ng"
edition = "2021"
authors = ["Denis Benato <benato.denis96@gmail.com>"]

[lib]
name = "pam_login_ng"
crate-type = ["cdylib"]

[[bin]]
name = "pam_login_ng-service"
path = "src/pam_login_ng-service/main.rs"

[[bin]]
name = "pam_login_ng-mount"
path = "src/pam_login_ng-mount/main.rs"

[dependencies]
pam_login_ng_common = { path = "../pam_login_ng-common" }
argh = "^0"
pam = { git = "https://github.com/NeroReflex/pam-rs.git", rev = "ec92f8ae87b3420d63fa7fd4366a6a8403eff028" }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
thiserror = "^2"

[package.metadata.deb]
license-file = ["../LICENSE.md", "4"]
extended-description = """\
Additional pam module and service to login the user."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/pam_login_ng-service", "usr/bin/", "755"],
    ["../rootfs/usr/lib/systemd/system/pam_login_ng.service", "usr/lib/systemd/system/", "644"],
    ["../rootfs/usr/lib/systemd/system/greetd.service.d/override.conf", "usr/lib/systemd/system/greetd.service.d/", "644"],
    ["../rootfs/usr/share/dbus-1/system.d/org.neroreflex.login_ng_session.conf", "usr/share/dbus-1/system.d/", "644"],
    ["../rootfs/usr/share/dbus-1/system.d/org.neroreflex.login_ng_mount.conf", "usr/share/dbus-1/system.d/", "644"],
]
