[package]
name = "sessionexec"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
rust-ini = { version = "*" }
libc = { version = "*", features = [] }
signal-hook = { version = "*" }
whoami = { version = "*" }

[package.metadata.deb]
license-file = ["../LICENSE.md", "4"]
extended-description = """\
Starts the user desktop environment of choice."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/sessionexec", "usr/bin/", "755"],
    ["../rootfs/usr/lib/os-session-select", "usr/lib/", "755"],
    ["../rootfs/usr/lib/sessionexec/session-return.sh", "usr/lib/", "755"],
    ["../rootfs/usr/share/applications/org.sessionexec.session-return.desktop", "usr/share/applications/", "755"],
    ["../rootfs/etc/login_ng-session/steamdeck.service", "etc/login_ng-session/", "644"],
    ["../rootfs/etc/login_ng-session/restart_session.service", "etc/login_ng-session/", "644"],
]
